# project-lvl1-s566

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
asciinemas/: step2.cast  step4.cast  step5.cast  step6.cast  step7.cast  step8.cast
brain_games/: cli.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
