[tool.poetry]
name = "UnnamedHero_brain_games"
version = "0.1.0"
description = "Hexlet.io python project #1"
authors = ["UnnamedHero"]
packages = [
	{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
