[tool.poetry]
name = "UnnamedHero_brain_games"
version = "0.6.0"
description = "Hexlet.io python project #1"
authors = ["UnnamedHero"]
packages = [
	{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.5"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:brain_even"
brain-calc = "brain_games.scripts.brain_calc:brain_calc"
brain-gcd = "brain_games.scripts.brain_gcd:brain_gcd"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
